// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPage renders loading page 1`] = `<Loading />`;

exports[`ListPage renders page with error banner 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, import, edit, and reuse snippets.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your template snippets",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Snippet",
      "to": "/snippets/create",
    }
  }
  title="Snippets"
>
  <ApiErrorBanner
    errorDetails="Oh no!"
    message="Sorry, we seem to have had some trouble loading your snippets."
    reload={[Function]}
  />
</Page>
`;

exports[`ListPage renders page with snippet collection 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, import, edit, and reuse snippets.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your template snippets",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Snippet",
      "to": "/snippets/create",
    }
  }
  title="Snippets"
>
  <SnippetCollection
    canCreate={true}
    hasSubaccounts={true}
    snippets={
      Array [
        Object {
          "id": "example-id",
          "name": "Example Snippet",
        },
      ]
    }
  />
</Page>
`;

exports[`ListPage renders page without primary action button 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, import, edit, and reuse snippets.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your template snippets",
    }
  }
  title="Snippets"
>
  <SnippetCollection
    canCreate={false}
    hasSubaccounts={true}
    snippets={
      Array [
        Object {
          "id": "example-id",
          "name": "Example Snippet",
        },
      ]
    }
  />
</Page>
`;

exports[`ListPage renders page without subaccount column 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, import, edit, and reuse snippets.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your template snippets",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Snippet",
      "to": "/snippets/create",
    }
  }
  title="Snippets"
>
  <SnippetCollection
    canCreate={true}
    hasSubaccounts={false}
    snippets={
      Array [
        Object {
          "id": "example-id",
          "name": "Example Snippet",
        },
      ]
    }
  />
</Page>
`;
